# xmcp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  server.json  usage-guide.md
.claude/: settings.local.json
examples/: ide_test.rs
scripts/: ide-test.sh  update-xojo-docs.sh
src/: main.rs
src/ide/: communicator.rs  mod.rs  script.rs
src/mcp/: mod.rs  protocol.rs  resources.rs  server.rs  tool.rs
src/tools/: cost_tool.rs  debug_tools.rs  doc_tools.rs  ide_tools.rs  mod.rs
