[package]
name = "xmcp"
version = "2.1.5"
edition = "2024"
license = "MIT"
description = "MCP server for controlling the Xojo IDE"
repository = "https://codeberg.org/brechanbech/xmcp-rs"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
