[package]
name = "xmcp"
version = "2.1.7"
edition = "2024"
license = "MIT"
description = "MCP server for controlling the Xojo IDE"
repository = "https://codeberg.org/brechanbech/xmcp-rs"
readme = "README.md"
keywords = ["mcp", "xojo", "ai", "claude", "ide"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
